Fixed arrow overflow

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -55,12 +55,6 @@ h3 {
     100% {opacity:0}
 }
 
-.arrows {
-	position: absolute;
-	left: 50%;
-	margin-left: -30px;
-}
-
 .arrows path {
 	stroke: #1877F2;
 	fill: transparent;
